k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: youtube-mp3-api
  labels:
    app.kubernetes.io/name: youtube-mp3-api
    app.kubernetes.io/part-of: youtube-mp3
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: youtube-mp3-api
  ports:
    - name: http
      port: 8000
      targetPort: http
