k8s/base/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: yootoob-mp3-frontend
  labels:
    app.kubernetes.io/name: yootoob-mp3-frontend
    app.kubernetes.io/part-of: yootoob-mp3
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: yootoob-mp3-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
