k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yootoob-mp3
  labels:
    app.kubernetes.io/name: yootoob-mp3
    app.kubernetes.io/part-of: yootoob-mp3
spec:
  ingressClassName: traefik
  rules:
    - host: yootoob-mp3.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yootoob-mp3-frontend
                port:
                  name: http
